# imcomp

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
asset/imcomp/: CHANGELOG  LICENSE.txt  _imcomp_compare_algname_list.js  _imcomp_controller.js  _imcomp_model.js  _imcomp_view.js  _via_min.js  imcomp.css  imcomp.js  index.html
asset/imcomp/traherne/: CHANGELOG  _traherne_controller.js  _traherne_model.js  _traherne_model.js~  _traherne_view.js  _via_min.js  index.html  index.html~  traherne.css  traherne.js  traherne_google_analytics.js
doc/: deploy_vggdebug.md  howto_compile.md  imcomp_server_protocol.org  imcomp_server_protocol.org~  notes.txt  traherne_ui_mvc.org
doc/logo/favicon/: README.md
include/: imcomp_server_config.h
include/http_server/: connection.h  http_request.h  http_response.h  http_server.h
include/imcomp/: imcomp_asset.h  imcomp_cache.h  imcomp_request_handler.h
include/imreg_sift/: imreg_sift.h
include/util/: strutil.h  sysutil.h
resources/mac/: resources.plist  traherne_icon.icns
resources/win/: imcomp_server_win_res.rc
scripts/: 0x04_start_imcomp.sh  0x04_start_webdemo.sh  compile.sh  install_deps.sh  install_mac_clang_deps.sh  install_mac_dep.sh  install_mac_gcc_dep.sh  pack_imcomp_asset.sh  run_vggdebug2.sh
src/: CMakeLists.txt  imcomp_server.cc  imcomp_server_config.h.in
src/http_server/: CMakeLists.txt  connection.cc  http_request.cc  http_server.cc
src/imcomp/: CMakeLists.txt  imcomp_asset.cc  imcomp_cache.cc  imcomp_request_handler.cc
src/imreg_sift/: CMakeLists.txt  imreg_sift.cc  imreg_sift.h  test_imreg_sift.cc
src/relja_register/: CMakeLists.txt  putative_matches.cc  ransac_inliers.cc  register_images.cpp  register_images.h
src/relja_register/det_ransac/: CMakeLists.txt  det_ransac.cpp  det_ransac.h  homography.cpp  homography.h  putative.h
src/relja_register/external_lib/KMCode_relja/: CMakeLists.txt  CppProperties.json
src/relja_register/external_lib/KMCode_relja/ImageContent/: ImageContent.cpp  imageContent.h
src/relja_register/external_lib/KMCode_relja/descriptor/: AffineRegion.cpp  ComplexGauss.cpp  Corner.cpp  CornerDescriptor.cpp  CornerDetector.cpp  ESiftDescriptor.cpp  EdgeDescriptor.cpp  EdgeDetector.cpp  FastDetector.cpp  JetLocal.cpp  JetLocalAffine.cpp  KoenDescriptor.cpp  MomentDescriptor.cpp  PcaDescriptor.cpp  ShapeDescriptor.cpp  SiftDescriptor.cpp  SpinDescriptor.cpp  corner.h  edgeDescriptor.h
src/relja_register/external_lib/KMCode_relja/gauss_iir/: gauss_iir.cpp  gauss_iir.h
src/relja_register/external_lib/KMCode_relja/homography/: homography.cpp  homography.h
src/relja_register/external_lib/KMCode_relja/matrix/: creat.cpp  io.cpp
src/relja_register/external_lib/KMCode_relja/stats/: stats.cpp  stats.h
src/relja_register/external_lib/KMCode_relja/ttime/: ttime.cpp
src/relja_register/features/: CMakeLists.txt  desc_to_hell.h  feat_getter.cpp  feat_getter.h  feat_standard.cpp  feat_standard.h  quant_desc.h
src/relja_register/util/: CMakeLists.txt  util.h
src/util/: CMakeLists.txt  strutil.cc  sysutil.cc
src/vlfeat_register/: CMakeLists.txt  compile.sh  readme.md  test_vl_register_images.cc  test_vlfeat_register.cc  vl_register_images.cc  vl_register_images.h  vlfeat_register_images.m
src/vlfeat_register/external_lib/: CMakeLists.txt
static/imcomp/: _imcomp_ctrl.js  _imcomp_model.js  imcomp.js  imcomp_asset.cc  imcomp_google_analytics.js  index.html
static/imcomp/traherne/: traherne.css  traherne_google_analytics.js
static/traherne/: index.html
